[gd_scene load_steps=4 format=3 uid="uid://e7272gt071y1"]

[ext_resource type="Script" path="res://main/pause_menu.gd" id="1_i0sdj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dldgh"]
bg_color = Color(0.00784314, 0.00392157, 0, 0.941176)

[sub_resource type="LabelSettings" id="LabelSettings_2jmwc"]
font_size = 64

[node name="PauseMenu" type="Panel"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dldgh")
script = ExtResource("1_i0sdj")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.5
offset_top = -274.0
offset_right = 123.5
offset_bottom = -183.0
grow_horizontal = 2
grow_vertical = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_2jmwc")

[node name="Resume" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.5
offset_top = -26.5
offset_right = 65.5
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Resume Game"

[node name="ResetGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 35.0
offset_right = 96.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Reset Game"

[node name="MainMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = 101.0
offset_right = 91.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[node name="ExitGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = 218.0
offset_right = 82.5
offset_bottom = 271.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Exit Game"

[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ResetGame" to="." method="_on_reset_game_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="ExitGame" to="." method="_on_exit_game_pressed"]
